--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,39 @@
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%; }
+
 body {
-  background: pink; }
+  margin: 0; }
+
+main {
+  display: block; }
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+a {
+  background-color: transparent; }
+
+b,
+strong {
+  font-weight: bolder; }
+
+small {
+  font-size: 80%; }
+
+img {
+  border-style: none; }
+
+[hidden] {
+  display: none; }
+
+body {
+  background-color: #674baf;
+  color: #fff;
+  font-family: "Open Sans", sans-serif; }
+
+h1 {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700; }
