--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ html {
   -webkit-text-size-adjust: 100%; }
 
 body {
+  font-size: 16px;
   margin: 0; }
 
 main {
@@ -23,7 +24,8 @@ small {
   font-size: 80%; }
 
 img {
-  border-style: none; }
+  border-style: none;
+  max-width: 100%; }
 
 [hidden] {
   display: none; }
@@ -36,4 +38,12 @@ body {
 h1 {
   color: #fff;
   font-family: "Poppins", sans-serif;
-  font-weight: 700; }
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.6; }
+
+a.cta-button {
+  background-color: #fff;
+  font-family: "Poppins", sans-serif;
+  color: #674baf;
+  text-decoration: none; }
