--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,7 @@ html {
 }
 
 body {
+  font-size: 16px;
   margin: 0;
 }
 
@@ -41,6 +42,7 @@ small {
 
 img {
   border-style: none;
+  max-width: 100%;
 }
 
 [hidden] {
@@ -56,5 +58,14 @@ body {
 h1 {
   color: #fff;
   font-family: $heading-font;
+  font-size: 1.6rem;
   font-weight: 700;
+  line-height: 1.6;
+}
+
+a.cta-button {
+  background-color: #fff;
+  font-family: $heading-font;
+  color: $primary-color;
+  text-decoration: none;
 }
