--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,24 @@ html {
   -webkit-text-size-adjust: 100%; }
 
 body {
+  background: url("images/bg-mobile.svg") #674baf top center no-repeat;
+  background-position: top;
+  background-size: cover;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   margin: 0; }
 
 main {
-  display: block; }
+  display: block;
+  text-align: center; }
 
 h1 {
-  font-size: 2em;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.6em;
+  font-weight: 700;
+  line-height: 1.4;
   margin: 0.67em 0; }
 
 a {
@@ -30,20 +40,16 @@ img {
 [hidden] {
   display: none; }
 
-body {
-  background-color: #674baf;
-  color: #fff;
-  font-family: "Open Sans", sans-serif; }
-
-h1 {
-  color: #fff;
-  font-family: "Poppins", sans-serif;
-  font-size: 1.6rem;
-  font-weight: 700;
-  line-height: 1.6; }
+p {
+  font-size: 1.2rem;
+  line-height: 1.4; }
 
 a.cta-button {
   background-color: #fff;
-  font-family: "Poppins", sans-serif;
+  border-radius: 2rem;
   color: #674baf;
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
+  padding: 20px 80px;
   text-decoration: none; }
