--- a/styles.scss
+++ b/styles.scss
@@ -6,24 +6,32 @@ $primary-color: hsl(257, 40%, 49%);
 $heading-font: 'Poppins', sans-serif;
 $body-font: 'Open Sans', sans-serif;
 
-// Reset
-// condensed from normalize.css v8.0.1
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
 }
 
 body {
+  background: url('images/bg-mobile.svg') $primary-color top center no-repeat;
+  background-position: top;
+  background-size: cover;
+  color: #fff;
+  font-family: $body-font;
   font-size: 16px;
   margin: 0;
 }
 
 main {
   display: block;
+  text-align: center;
 }
 
 h1 {
-  font-size: 2em;
+  color: #fff;
+  font-family: $heading-font;
+  font-size: 1.6em;
+  font-weight: 700;
+  line-height: 1.4;
   margin: 0.67em 0;
 }
 
@@ -49,23 +57,18 @@ img {
   display: none;
 }
 
-body {
-  background-color: $primary-color;
-  color: #fff;
-  font-family: $body-font;
-}
-
-h1 {
-  color: #fff;
-  font-family: $heading-font;
-  font-size: 1.6rem;
-  font-weight: 700;
-  line-height: 1.6;
+p {
+  font-size: 1.2rem;
+  line-height: 1.4;
 }
 
 a.cta-button {
   background-color: #fff;
-  font-family: $heading-font;
+  border-radius: 2rem;
   color: $primary-color;
+  display: inline-block;
+  font-family: $heading-font;
+  font-size: 1.2rem;
+  padding: 20px 80px;
   text-decoration: none;
 }
