--- a/styles.scss
+++ b/styles.scss
@@ -6,6 +6,13 @@ $primary-color: hsl(257, 40%, 49%);
 $heading-font: 'Poppins', sans-serif;
 $body-font: 'Open Sans', sans-serif;
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
@@ -14,16 +21,12 @@ html {
 body {
   background: url('images/bg-mobile.svg') $primary-color top center no-repeat;
   background-position: top;
-  background-size: cover;
+  background-size: contain;
   color: #fff;
+  display: grid;
   font-family: $body-font;
   font-size: 16px;
-  margin: 0;
-}
-
-main {
-  display: block;
-  text-align: center;
+  padding: 2rem;
 }
 
 h1 {
@@ -31,7 +34,8 @@ h1 {
   font-family: $heading-font;
   font-size: 1.6em;
   font-weight: 700;
-  line-height: 1.4;
+  letter-spacing: 1px;
+  line-height: 1.6;
   margin: 0.67em 0;
 }
 
@@ -58,8 +62,8 @@ img {
 }
 
 p {
-  font-size: 1.2rem;
-  line-height: 1.4;
+  font-size: 1rem;
+  line-height: 1.6;
 }
 
 a.cta-button {
@@ -68,7 +72,53 @@ a.cta-button {
   color: $primary-color;
   display: inline-block;
   font-family: $heading-font;
-  font-size: 1.2rem;
-  padding: 20px 80px;
+  font-size: .875rem;
+  padding: 15px 80px;
   text-decoration: none;
+  margin-top: 10px;
+}
+
+header {
+  margin-bottom: 60px;
+
+  img {
+    max-width: 130px;
+  }
+}
+
+main {
+  display: block;
+  text-align: center;
+
+  figure {
+    margin: 0 0 75px;
+  }
+
+  & > div {
+    padding: 0 6px;
+  }
+}
+
+footer {
+  width: 100%;
+}
+
+#social-menu {
+  list-style: none;
+  margin: 0;
+  padding-left: 0px;
+  text-align: center;
+
+  li {
+    border: 1px solid #fff;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0px 5px;
+    padding: 7px;
+    width: 15px;
+
+    a {
+      color: #fff;
+    }
+  }
 }
