--- a/styles.scss
+++ b/styles.scss
@@ -130,3 +130,23 @@ footer {
     }
   }
 }
+
+@media screen and (min-width: 768px) {
+  body {
+    background: url('images/bg-desktop.svg') $primary-color top center no-repeat;
+  }
+
+  .container {
+    margin: 0px auto;
+    max-width: 1440px;
+  }
+
+  main {
+    display: flex;
+    justify-content: space-between;
+
+    figure img {
+      min-width: 300px;
+    }
+  }
+}
