--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ main {
     padding: 0 6px; }
 
 footer {
-  bottom: 0px;
+  bottom: 20px;
   height: 60px;
   position: absolute;
   width: 100%; }
@@ -106,5 +106,12 @@ footer {
   main {
     display: flex;
     justify-content: space-between; }
-    main figure img {
-      min-width: 300px; } }
+    main figure {
+      flex: 1 0 65%; }
+    main div {
+      text-align: left;
+      margin: 0px 30px; }
+    main h1 {
+      font-size: 2em; }
+  footer {
+    bottom: 40px; } }
