--- a/styles.scss
+++ b/styles.scss
@@ -105,7 +105,7 @@ main {
 }
 
 footer {
-  bottom: 0px;
+  bottom: 20px;
   height: 60px;
   position: absolute;
   width: 100%;
@@ -145,8 +145,21 @@ footer {
     display: flex;
     justify-content: space-between;
 
-    figure img {
-      min-width: 300px;
+    figure {
+      flex: 1 0 65%;
     }
+
+    div {
+      text-align: left;
+      margin: 0px 30px;
+    }
+
+    h1 {
+      font-size: 2em;
+    }
+  }
+
+  footer {
+    bottom: 40px;
   }
 }
