--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,8 @@ footer {
 
 @media screen and (min-width: 768px) {
   body {
-    background: url("images/bg-desktop.svg") #674baf top center no-repeat; }
+    background: url("images/bg-desktop.svg") #674baf top center no-repeat;
+    background-size: contain; }
   .container {
     margin: 0px auto;
     max-width: 1440px; }
@@ -114,4 +115,6 @@ footer {
     main h1 {
       font-size: 2em; }
   footer {
-    bottom: 40px; } }
+    position: inherit;
+    display: flex;
+    justify-content: flex-end; } }
