--- a/styles.scss
+++ b/styles.scss
@@ -134,6 +134,7 @@ footer {
 @media screen and (min-width: 768px) {
   body {
     background: url('images/bg-desktop.svg') $primary-color top center no-repeat;
+    background-size: contain;
   }
 
   .container {
@@ -160,6 +161,8 @@ footer {
   }
 
   footer {
-    bottom: 40px;
+    position: inherit;
+    display: flex;
+    justify-content: flex-end;
   }
 }
