--- a/styles.scss
+++ b/styles.scss
@@ -109,11 +109,20 @@ footer {
   height: 60px;
   position: absolute;
   width: 100%;
+
+  .attribution {
+    font-size: 11px;
+    text-align: center;
+
+    a {
+      color: #baafd5;
+    }
+  }
 }
 
 #social-menu {
   list-style: none;
-  margin: 0;
+  margin: 0 0 20px 0;
   padding-left: 0px;
   text-align: center;
 
@@ -131,7 +140,7 @@ footer {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 900px) {
   body {
     background: url('images/bg-desktop.svg') $primary-color top center no-repeat;
     background-size: contain;
@@ -162,7 +171,11 @@ footer {
 
   footer {
     position: inherit;
-    display: flex;
-    justify-content: flex-end;
+
+
+    #social-menu {
+      display: flex;
+      justify-content: flex-end;
+    }
   }
 }
